# bazel-helpers

./: BUILD.bazel  WORKSPACE
cmd/http_rule/: BUILD.bazel  main.go
